Add style header to md file in straight HTML for tables.

--- a/PaperDraft/howmany.htm
+++ b/PaperDraft/howmany.htm
@@ -1,3 +1,19 @@
+<head>
+<style>
+th {
+background-color: yellow;
+font-family: sans-serif;
+}
+td {
+border: 1px solid black;
+}
+table {
+width: 80%;
+border-collapse: collapse;
+}
+</style>
+</head>
+<p>% How Many Copies Is Enough? % Micah Altman; Richard Landau % 2016-07-11</p>
 <h1 id="title" class="unnumbered">How Many Copies Is Enough?</h1>
 <p><strong>Assessing Long-term Durability of Collections Through A Flexible, Replicable Simulation</strong></p>
 <blockquote>
